@@ -6,6 +6,7 @@
 * Improve bed rendering for Minecraft 1.12 (colored beds).
 * Y clipping is now a per-scene setting, with an upper clip value.
 * The Y clip planes now cull non-player entities.
+* Spruce and birch leaf colors are now fixed like in Minecraft.
 
 1.4.3 - 2017-07-22
 
